@@ -1,0 +1,7 @@
+2,4,4,2,0
+2,5,4,2,0
+2,4,4,4,0
+8,4,4,2,1
+8,4,4,2,1
+8,5,4,2,1
+8,4,4,4,1
