@@ -1,0 +1,2 @@
+2.75, 4.0000, 3.6875, 2.3750, 0.3333, 0.8000, 0.6292, 0.3833, 0.5161
+8.3333, 4.6667, 3.6667, 2.4, 0.8095, 3.3810, 0.6667, 0.4000, 0.4839
