@@ -1,0 +1,31 @@
+3,3,3,3,0
+3,4,4,3,0
+3,4,4,3,0
+3,3,4,3,0
+3,6,4,3,0
+2,4,4,3,0
+2,4,4,1,0
+3,3,3,2,0
+3,4,4,2,0
+3,4,4,2,0
+3,3,4,2,0
+3,6,4,2,0
+2,4,4,2,0
+2,4,4,3,0
+2,4,1,2,0
+4,4,4,2,0
+9,3,3,3,1
+9,4,4,3,1
+9,4,4,3,1
+9,3,4,3,1
+9,6,4,3,1
+9,4,4,3,1
+9,4,4,1,1
+9,3,3,2,1
+8,4,4,2,1
+8,4,4,2,1
+8,3,4,2,1
+8,6,4,2,1
+7,8,4,3,1
+6,9,1,2,1
+8,5,4,2,1
