@@ -1,0 +1,14 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/data.R
+\docType{data}
+\name{trainSet}
+\alias{trainSet}
+\title{Training data from the mlpack unit tests}
+\format{A \sQuote{csv} file read in and \emph{transposed} by
+ \code{mlpack} conventions.}
+\source{
+\url{https://raw.githubusercontent.com/mlpack/mlpack/master/src/mlpack/tests/data/trainSet.csv}
+}
+\description{
+Training data from the mlpack unit tests
+}
